# KTX-Software-CTS

./: README.md
clitests/: .gitignore  CMakeLists.txt  clitest.py  output.txt  script.bat
clitests/golden/deflate/: error_blze_not_deflatable.txt
clitests/golden/info/: CesiumLogoFlat.out.json  CesiumLogoFlat.out.mini.json  CesiumLogoFlat.out.txt  FlightHelmet_baseColor_basis.out.json  FlightHelmet_baseColor_basis.out.mini.json  FlightHelmet_baseColor_basis.out.txt  alpha_simple_basis.out.json  alpha_simple_basis.out.mini.json  alpha_simple_basis.out.txt  arraytex_1_reference_u.out.json  arraytex_1_reference_u.out.mini.json  arraytex_1_reference_u.out.txt  arraytex_7_mipmap_reference_u.out.json  arraytex_7_mipmap_reference_u.out.mini.json  arraytex_7_mipmap_reference_u.out.txt  arraytex_7_reference_u.out.json  arraytex_7_reference_u.out.mini.json  arraytex_7_reference_u.out.txt  astc_ldr_10x5_FlightHelmet_baseColor.out.json  astc_ldr_10x5_FlightHelmet_baseColor.out.mini.json  astc_ldr_10x5_FlightHelmet_baseColor.out.txt  astc_ldr_12x10_FlightHelmet_baseColor.out.json  astc_ldr_12x10_FlightHelmet_baseColor.out.mini.json  astc_ldr_12x10_FlightHelmet_baseColor.out.txt  astc_ldr_12x12_FlightHelmet_baseColor.out.json  astc_ldr_12x12_FlightHelmet_baseColor.out.mini.json  astc_ldr_12x12_FlightHelmet_baseColor.out.txt  astc_ldr_4x4_FlightHelmet_baseColor.out.json  astc_ldr_4x4_FlightHelmet_baseColor.out.mini.json  astc_ldr_4x4_FlightHelmet_baseColor.out.txt  astc_ldr_5x4_Iron_Bars_001_normal.out.json  astc_ldr_5x4_Iron_Bars_001_normal.out.mini.json  astc_ldr_5x4_Iron_Bars_001_normal.out.txt  astc_ldr_6x5_FlightHelmet_baseColor.out.json  astc_ldr_6x5_FlightHelmet_baseColor.out.mini.json  astc_ldr_6x5_FlightHelmet_baseColor.out.txt  astc_ldr_6x6_3dtex_7.out.json  astc_ldr_6x6_3dtex_7.out.mini.json  astc_ldr_6x6_3dtex_7.out.txt  astc_ldr_6x6_Iron_Bars_001_normal.out.json  (+195 more)
clitests/input/encode/: large_R8G8B8A8_UNORM_2D_ZSTD.ktx2  large_R8G8_UNORM_2D_ZSTD.ktx2
clitests/input/exr/: basic_RGBA_FLOAT_HDR_1000x50.exr  basic_RGBA_FLOAT_HDR_16x16.exr  basic_RGBA_FLOAT_HDR_50x1000.exr  basic_RGBA_FLOAT_LDR_16x16.exr  basic_RGBA_HALF_HDR_1000x50.exr  basic_RGBA_HALF_HDR_16x16.exr  basic_RGBA_HALF_HDR_50x1000.exr  basic_RGBA_HALF_LDR_16x16.exr  basic_RGBA_UINT_1000x50.exr  basic_RGBA_UINT_16x16.exr  basic_RGBA_UINT_50x1000.exr  basic_RGB_FLOAT_HDR_16x16.exr  basic_RGB_FLOAT_LDR_16x16.exr  basic_RGB_HALF_HDR_16x16.exr  basic_RGB_HALF_LDR_16x16.exr  basic_RGB_UINT_16x16.exr  basic_RG_FLOAT_HDR_16x16.exr  basic_RG_FLOAT_LDR_16x16.exr  basic_RG_HALF_HDR_16x16.exr  basic_RG_HALF_LDR_16x16.exr  basic_RG_UINT_16x16.exr  basic_R_FLOAT_HDR_16x16.exr  basic_R_FLOAT_LDR_16x16.exr  basic_R_HALF_HDR_16x16.exr  basic_R_HALF_LDR_16x16.exr  basic_R_UINT_16x16.exr  chromaticities_ACES.exr  chromaticities_ACEScc.exr  chromaticities_AdobeRGB.exr  chromaticities_BT2020.exr  chromaticities_BT601_EBU.exr  chromaticities_BT601_SMPTE.exr  chromaticities_BT709.exr  chromaticities_CIEXYZ.exr  chromaticities_DisplayP3.exr  chromaticities_NTSC1953.exr  chromaticities_PAL525.exr  chromaticities_unknown.exr  line_order_decreasing.exr  line_order_increasing.exr
clitests/input/exr_sample/: linear_float32.exr  linear_float32_extreme.exr  linear_float32_huge.exr  linear_float32_medium.exr  test_gimp_gimp_BuiltsRGB_HALF_100x100.exr  test_gimp_sRGB_IEC61966-2_1_FLOAT_100x100.exr  test_gimp_sRGB_IEC61966-2_1_HALF_100x100.exr  test_this_way_up_RGB_HALF_128x128.exr  tiled_RGBA_FLOAT_100x100.exr
clitests/input/ktx/: bad_orient_key_UP_SRGB8_128x128.ktx  invalid_and_custom_keys_SRGB8_16x16.ktx  legacy_LUMINANCE8_16x16.ktx  legacy_LUMINANCE8_ALPHA8_16x16.ktx  legacy_SLUMINANCE8_16x16.ktx  legacy_SLUMINANCE8_ALPHA8_16x16.ktx  valid_R8_16x16.ktx  valid_RG16_16x16.ktx  valid_RG8_16x16.ktx  valid_RGB8_16x16.ktx  valid_SR8_16x16.ktx  valid_SRG8_16x16.ktx  valid_SRGB8_16x16.ktx
clitests/input/ktx2/: linear_float32-R16G16B16A16_SFLOAT-map-range-ZO.ktx2  valid_A1B5G5R5_UNORM_PACK16_KHR_1D.ktx2  valid_A1B5G5R5_UNORM_PACK16_KHR_1D_ARRAY.ktx2  valid_A1B5G5R5_UNORM_PACK16_KHR_1D_ARRAY_MIP.ktx2  valid_A1B5G5R5_UNORM_PACK16_KHR_1D_MIP.ktx2  valid_A1B5G5R5_UNORM_PACK16_KHR_2D.ktx2  valid_A1B5G5R5_UNORM_PACK16_KHR_2D_ARRAY.ktx2  valid_A1B5G5R5_UNORM_PACK16_KHR_2D_ARRAY_MIP.ktx2  valid_A1B5G5R5_UNORM_PACK16_KHR_2D_MIP.ktx2  valid_A1B5G5R5_UNORM_PACK16_KHR_3D.ktx2  valid_A1B5G5R5_UNORM_PACK16_KHR_3D_MIP.ktx2  valid_A1B5G5R5_UNORM_PACK16_KHR_CUBE.ktx2  valid_A1B5G5R5_UNORM_PACK16_KHR_CUBE_ARRAY.ktx2  valid_A1B5G5R5_UNORM_PACK16_KHR_CUBE_ARRAY_MIP.ktx2  valid_A1B5G5R5_UNORM_PACK16_KHR_CUBE_MIP.ktx2  valid_A1R5G5B5_UNORM_PACK16_1D_MIP.ktx2  valid_A1R5G5B5_UNORM_PACK16_2D.ktx2  valid_A1R5G5B5_UNORM_PACK16_2D_ARRAY.ktx2  valid_A1R5G5B5_UNORM_PACK16_2D_MIP.ktx2  valid_A1R5G5B5_UNORM_PACK16_CUBE_ARRAY.ktx2  valid_A1R5G5B5_UNORM_PACK16_CUBE_MIP.ktx2  valid_A2B10G10R10_SINT_PACK32_1D_ARRAY_MIP.ktx2  valid_A2B10G10R10_SINT_PACK32_1D_MIP.ktx2  valid_A2B10G10R10_SINT_PACK32_3D.ktx2  valid_A2B10G10R10_SINT_PACK32_3D_MIP.ktx2  valid_A2B10G10R10_SINT_PACK32_CUBE_MIP.ktx2  valid_A2B10G10R10_UINT_PACK32_1D_ARRAY_MIP.ktx2  valid_A2B10G10R10_UINT_PACK32_1D_MIP.ktx2  valid_A2B10G10R10_UINT_PACK32_2D.ktx2  valid_A2B10G10R10_UINT_PACK32_2D_ARRAY.ktx2  valid_A2B10G10R10_UINT_PACK32_2D_ARRAY_MIP.ktx2  valid_A2B10G10R10_UINT_PACK32_CUBE.ktx2  valid_A2B10G10R10_UINT_PACK32_CUBE_ARRAY.ktx2  valid_A2B10G10R10_UINT_PACK32_CUBE_ARRAY_MIP.ktx2  valid_A2B10G10R10_UNORM_PACK32_1D_MIP.ktx2  valid_A2B10G10R10_UNORM_PACK32_2D.ktx2  valid_A2B10G10R10_UNORM_PACK32_2D_ZLIB_1.ktx2  valid_A2B10G10R10_UNORM_PACK32_2D_ZLIB_9.ktx2  valid_A2B10G10R10_UNORM_PACK32_2D_ZSTD_1.ktx2  valid_A2B10G10R10_UNORM_PACK32_2D_ZSTD_9.ktx2  (+706 more)
clitests/input/ktx2_sample/: CesiumLogoFlat.ktx2  FlightHelmet_baseColor_basis.ktx2  alpha_simple_basis.ktx2  astc_ldr_10x5_FlightHelmet_baseColor.ktx2  astc_ldr_12x10_FlightHelmet_baseColor.ktx2  astc_ldr_12x12_FlightHelmet_baseColor.ktx2  astc_ldr_5x4_Iron_Bars_001_normal.ktx2  astc_ldr_6x5_FlightHelmet_baseColor.ktx2  astc_ldr_6x6_Iron_Bars_001_normal.ktx2  (+31 more)
(+19083 files in other folders)
